--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>E3 Productions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="shortcut icon" href="e3-logo.jpg" type="image/jpg" />
+    <link rel="icon" href="e3-logo.jpg" type="image/jpg" />
   </head>
   <body>
     <div class="container">
